syntax = "proto3";

package customers;

option go_package = "proto;customers";

service Customers {
	// Creates a new, unverified customer
	rpc Create(CreateRequest) returns (CreateResponse) {}
	// Mark the customer as verified
	rpc MarkVerified(MarkVerifiedRequest) returns (MarkVerifiedResponse) {}
	// Retrieve a customer
	rpc Read(ReadRequest) returns (ReadResponse) {}
	// Marks a customer as inactive
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}

}


message CreateRequest {
	string id1 = 1;// deprecated
	string email = 2;
}

message CreateResponse {
	Customer customer = 1;
}

message Customer {
	string id1 = 1;
	string status = 2; // awaiting_verification, verified, active, inactive
	int64 created = 3;
	string email = 6;
}

message DeleteRequest {
	string id1 = 1;
}

message DeleteResponse {
}

message ReadRequest {
	string id1 = 1;
	string email = 2;
}

message ReadResponse {
	Customer customer = 1;
}

message MarkVerifiedRequest {
	string id1 = 1;
	string email = 2;
}

message MarkVerifiedResponse {}