syntax = "proto3";

package publicapiusage;

option go_package = "./proto;publicapiusage";

service Publicapiusage {
	rpc Read(ReadRequest) returns (ReadResponse) {}
}

message ReadRequest {
	string customer_id = 1;
}

message Usage {
	string api_name = 1;
	repeated UsageRecord records = 2;
}

message UsageRecord {
	int64 date = 1;
	int64 requests = 2;
}

message ReadResponse {
	repeated Usage usage = 1;
}
